--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 :root{
-    --top_margin: 80px;
+    --top_margin: 60px;
     --bottom_margin: 70px;
     --right_margin: 1%;
     --left_margin:  1%;
@@ -130,4 +130,12 @@ img:not([disabled]){
 }
 #fillSelector{
     width: 40px;
+}
+
+h1 {
+  font-size: 70px;
+  font-weight: 600;
+  color: #fdfdfe;
+  text-shadow: 0px 0px 5px #b393d3, 0px 0px 10px #b393d3, 0px 0px 10px #b393d3,
+    0px 0px 20px #b393d3;
 }
